--- a/src/views/html/assets/scss/common/_button.scss
+++ b/src/views/html/assets/scss/common/_button.scss
@@ -1,5 +1,5 @@
 // button
-.pf_btn {
+.com_btn {
 	position: relative;
 	padding: 0 30px;
 	border-radius: 6px;
@@ -29,7 +29,7 @@
 			margin-top: 30px;
 			@include media-min($m) {
 				gap: 20px;
-				.pf_btn {
+				.com_btn {
 					min-width: 200px;
 				}
 			}
@@ -37,7 +37,7 @@
 				gap: 10px;
 			}
 			@include media-max($m) {
-				.pf_btn {
+				.com_btn {
 					flex: 1;
 				}
 			}
@@ -50,7 +50,7 @@
 			@include media-max($m) {
 				@include flex(column);
 				gap: 10px;
-				.pf_paging {
+				.com_paging {
 					order: 2;
 				}
 			}
@@ -61,7 +61,7 @@
 					position: absolute;
 					right: 0;
 					top: 0;
-					.pf_btn {
+					.com_btn {
 						min-width: 0;
 					}
 				}
@@ -69,7 +69,7 @@
 					top: 0;
 				}
 				@include media-max($m) {
-					.pf_btn {
+					.com_btn {
 						flex: 1;
 					}
 					order: 1;
@@ -79,7 +79,7 @@
 		&.right {
 			justify-content: flex-end;
 		}
-		.pf_paging {
+		.com_paging {
 			margin-top: 5px;
 		}
 	}
@@ -279,14 +279,14 @@
 }
 
 //아이콘버튼
-.pf_btn_edit {
+.com_btn_edit {
 	width: 26px;
 	height: 26px;
 	border-radius: 50%;
 	background-color: #fff;
 	@include flex(all);
 }
-.pf_btn_mike {
+.com_btn_mike {
 	@include flex(all);
 	width: 46px;
 	height: 46px;
@@ -296,7 +296,7 @@
 }
 
 /*!페이징 << < > >> */
-.pf_paging {
+.com_paging {
 	margin-top: 70px;
 	text-align: center;
 	@include media-max($l) {
@@ -368,7 +368,7 @@
 }
 
 //탭
-.pf_tab {
+.com_tab {
 	margin-left: auto;
 	display: flex;
 	gap: 40px;
@@ -418,21 +418,21 @@
 	}
 }
 //서브링크
-.pf_sub_link {
+.com_sub_link {
 	background-color: $point;
 	.dark & {
 		background-color: $inner-dark;
 		border-bottom: 1px solid $c-border-dark-light;
 	}
 	&.center {
-		.pf_center_wrap {
+		.com_center_wrap {
 			justify-content: center;
 			@media screen and (max-width: 374.9px) {
 				justify-content: flex-start;
 			}
 		}
 	}
-	.pf_center_wrap {
+	.com_center_wrap {
 		@include flex(s);
 		padding: 30px 60px;
 		gap: 40px;
@@ -467,10 +467,10 @@
 	}
 }
 //서브링크 depth3
-.pf_sub_link2 {
+.com_sub_link2 {
 	gap: 5px;
 	margin-bottom: 20px;
-	.pf_btn {
+	.com_btn {
 		border-radius: 10px;
 		font-size: 14px;
 		font-weight: 600;
@@ -491,8 +491,8 @@
 
 //Checkbox 커스텀
 //&일반 checkbox , radio
-//  <label class="pf_chk"><input type="checkbox">윙</label> //마크업은 수정 불가
-.pf_chk {
+//  <label class="com_chk"><input type="checkbox">윙</label> //마크업은 수정 불가
+.com_chk {
 	@include inflex(y);
 	gap: 7px;
 	cursor: pointer;
@@ -561,7 +561,7 @@
 		}
 	}
 }
-.pf_chk_btn {
+.com_chk_btn {
 	cursor: pointer;
 	&__wrap {
 		@include flex(y);
@@ -659,7 +659,7 @@
 		}
 	}
 }
-.pf_board_sort {
+.com_board_sort {
 	@include flex(s);
 	//@include flex-wrap;
 	gap: 10px;
@@ -714,7 +714,7 @@
 		}
 		@include media-max($m) {
 			@include list(5px, 5px, 5);
-			.pf_chk_btn {
+			.com_chk_btn {
 				flex: 1;
 				.btn {
 					width: 100%;
@@ -722,7 +722,7 @@
 			}
 		}
 	}
-	.pf_chk_btn {
+	.com_chk_btn {
 		.btn {
 			font-size: 16px;
 			padding-inline: 20px;
@@ -733,7 +733,7 @@
 		}
 	}
 }
-.pf_star {
+.com_star {
 	//별점 선택하기
 	position: relative;
 	direction: rtl;
@@ -788,7 +788,7 @@
 		}
 	}
 }
-.pf_btn_like {
+.com_btn_like {
 	input {
 		display: none;
 	}
@@ -837,7 +837,7 @@
 		}
 	}
 }
-.pf_cart {
+.com_cart {
 	input {
 		display: none;
 	}
@@ -873,7 +873,7 @@
 		}
 	}
 }
-.pf_btn_subscribe {
+.com_btn_subscribe {
 	&:hover {
 		cursor: pointer;
 	}
@@ -901,7 +901,7 @@
 		}
 	}
 }
-.pf_thumbup {
+.com_thumbup {
 	@include flex(_);
 	gap: 5px;
 	line-height: initial;
@@ -920,7 +920,7 @@
 }
 
 //info popup 버튼
-.pf_btn_info {
+.com_btn_info {
 	@include flex(y);
 	gap: 10px;
 	justify-content: flex-end;
@@ -935,8 +935,8 @@
 
 //qr share 버튼
 
-.pf_btn_qr,
-.pf_btn_share {
+.com_btn_qr,
+.com_btn_share {
 	border-radius: 6px;
 	border: 2px solid $point;
 	@include flex(all);
@@ -948,13 +948,13 @@
 	.dark & {
 		background-color: $bg-dark;
 	}
-	&.pf_btn_qr {
+	&.com_btn_qr {
 		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none'%3E%3Cpath stroke='%235B637A' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M19.511 1.602H4.49A2.889 2.889 0 0 0 1.6 4.49v15.023a2.889 2.889 0 0 0 2.889 2.889h15.022a2.889 2.889 0 0 0 2.89-2.89V4.49a2.889 2.889 0 0 0-2.89-2.888Z'/%3E%3Cpath stroke='%235B637A' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M10.267 6.805H6.8v3.466h3.467V6.805ZM10.267 13.734H6.8v3.467h3.467v-3.467ZM17.2 6.805h-3.467v3.466H17.2V6.805ZM13.791 13.734h-.058M13.791 17.203h-.058M17.2 17.202V15.47h-1.762'/%3E%3C/svg%3E");
 		.dark & {
 			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' fill='none'%3E%3Cpath stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M19.511 1.602H4.49A2.889 2.889 0 0 0 1.6 4.49v15.023a2.889 2.889 0 0 0 2.889 2.889h15.022a2.889 2.889 0 0 0 2.89-2.89V4.49a2.889 2.889 0 0 0-2.89-2.888Z'/%3E%3Cpath stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M10.267 6.805H6.8v3.466h3.467V6.805ZM10.267 13.734H6.8v3.467h3.467v-3.467ZM17.2 6.805h-3.467v3.466H17.2V6.805ZM13.791 13.734h-.058M13.791 17.203h-.058M17.2 17.202V15.47h-1.762'/%3E%3C/svg%3E");
 		}
 	}
-	&.pf_btn_share {
+	&.com_btn_share {
 		background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='22' fill='none'%3E%3Cpath stroke='%235B637A' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M15.69 7.323c1.601 0 2.899-1.326 2.899-2.962 0-1.636-1.298-2.963-2.898-2.963-1.601 0-2.899 1.327-2.899 2.963 0 1.636 1.298 2.962 2.899 2.962ZM4.098 14.237c1.6 0 2.898-1.326 2.898-2.962 0-1.636-1.297-2.963-2.898-2.963-1.6 0-2.898 1.327-2.898 2.963 0 1.636 1.298 2.962 2.898 2.962ZM15.69 21.143c1.601 0 2.899-1.326 2.899-2.962 0-1.636-1.298-2.962-2.898-2.962-1.601 0-2.899 1.326-2.899 2.962 0 1.636 1.298 2.962 2.899 2.962ZM6.598 12.766l6.605 3.925M13.191 5.852 6.598 9.777'/%3E%3C/svg%3E");
 		.dark & {
 			background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='22' fill='none'%3E%3Cpath stroke='%23fff' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5' d='M15.69 7.323c1.601 0 2.899-1.326 2.899-2.962 0-1.636-1.298-2.963-2.898-2.963-1.601 0-2.899 1.327-2.899 2.963 0 1.636 1.298 2.962 2.899 2.962ZM4.098 14.237c1.6 0 2.898-1.326 2.898-2.962 0-1.636-1.297-2.963-2.898-2.963-1.6 0-2.898 1.327-2.898 2.963 0 1.636 1.298 2.962 2.898 2.962ZM15.69 21.143c1.601 0 2.899-1.326 2.899-2.962 0-1.636-1.298-2.962-2.898-2.962-1.601 0-2.899 1.326-2.899 2.962 0 1.636 1.298 2.962 2.899 2.962ZM6.598 12.766l6.605 3.925M13.191 5.852 6.598 9.777'/%3E%3C/svg%3E");
@@ -963,7 +963,7 @@
 }
 
 //토글 스위치 버튼
-.pf_switch {
+.com_switch {
 	&__wrap {
 		position: relative;
 		width: 40px;
