--- a/src/views/html/assets/scss/css/main.css
+++ b/src/views/html/assets/scss/css/main.css
@@ -8,11 +8,11 @@
     margin-top: 40px;
   }
 }
-.main .pf_tab__wrap {
+.main .com_tab__wrap {
   margin-bottom: 40px;
 }
 @media screen and (max-width: 1023.98px) {
-  .main .pf_tab__wrap {
+  .main .com_tab__wrap {
     margin-top: 60px;
     margin-bottom: 20px;
   }
